# masters_thesis

./: .gitignore  pyproject.toml
notebooks/: Isolation Forest.ipynb  Paper.ipynb  Untitled.ipynb  basic analysis.ipynb  graphs.ipynb
notebooks/.ipynb_checkpoints/: Isolation Forest-checkpoint.ipynb
