[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["ninz <nreclarin@gmail.coml>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.4.3"
opencv-python = "^4.4.0"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
tensorflow = "^2.3.1"
scikit-learn = "^0.23.2"
scikit-image = "^0.17.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
